--- a/gb/20/1/2/n11762099.md
+++ b/gb/20/1/2/n11762099.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eassqe376/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eassqe376/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eassqe376/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eassqe376/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2019年纽约市火灾死亡人数  比上年减1/4</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月02日讯】（大纪元记者朱立佳美国<ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约<ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80%E9%95%BF.md#1">消防局长</a>尼格罗（Daniel A.Nigro）周二（12月31日）宣布，2019年纽约市有66名平民死于<ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，比2018年在火灾中丧生的88人减少了25%。这标志着纽约市连续第十四年因火灾而死亡的人数少于100人，这是纽约市历史上前所未有的时期。</p>
-<p><ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市长白思豪说，“在纽约消防局（ FDNY）任职的每个人是我们日常生活的英雄。他们的辛勤工作和对公共安全的承诺使去年纽约不必要丧生的人数急剧减少。从救火和调查<ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，到提供出色的医疗服务，我为每位消防员的勇敢和为我们城市的付出而喝彩。”</p>
-<p><ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80%E9%95%BF.md#1">消防局长</a>尼格罗说，“感谢每一位FDNY成员的勇敢工作，尽管我们要面临越来越多的医疗紧急情况，但2019年在火灾中丧生的纽约人减少了。这项突出成绩是我们努力确保公众安全的结果，我们的消防员迅速进行反应，齐心协力从火灾中救人，提供无人能比的紧急医疗服务，彻查火灾原因，教育公众，并检查整个城市建筑物和公众聚集区。”</p>
+<p>【大纪元2020年01月02日讯】（大纪元记者朱立佳美国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80%E9%95%BF.md#1">消防局长</a>尼格罗（Daniel A.Nigro）周二（12月31日）宣布，2019年纽约市有66名平民死于<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，比2018年在火灾中丧生的88人减少了25%。这标志着纽约市连续第十四年因火灾而死亡的人数少于100人，这是纽约市历史上前所未有的时期。</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市长白思豪说，“在纽约消防局（ FDNY）任职的每个人是我们日常生活的英雄。他们的辛勤工作和对公共安全的承诺使去年纽约不必要丧生的人数急剧减少。从救火和调查<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，到提供出色的医疗服务，我为每位消防员的勇敢和为我们城市的付出而喝彩。”</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80%E9%95%BF.md#1">消防局长</a>尼格罗说，“感谢每一位FDNY成员的勇敢工作，尽管我们要面临越来越多的医疗紧急情况，但2019年在火灾中丧生的纽约人减少了。这项突出成绩是我们努力确保公众安全的结果，我们的消防员迅速进行反应，齐心协力从火灾中救人，提供无人能比的紧急医疗服务，彻查火灾原因，教育公众，并检查整个城市建筑物和公众聚集区。”</p>
 <p>经消防局鉴定，2019年火灾死亡原因如下：电力：15例；烹饪：13例；抽烟：8例；蜡烛：6例；纵火：6例；汽车着火：4例；明火：2例；可燃液体/气体：2例；自焚：2例；高温：1例；燃香：1例；另外还有6例仍在调查中。</p>
 <p>虽然，2019年的火灾致命减少，但是，FDNY急救中心应对了创纪录的医疗紧急情况1,531,870起，比2018年的1,529,569起有所增加。</p>
 <p>过去10年纽约市因火灾死亡的人数为：2019年66人；2018年88人（10年中人数最多）；2017年73人；2016年48人（100年来最低人数）；2015年59人； 2014年71人；2013年67人；2012年58人；2011年66人；2010年62人。</p>
@@ -18,48 +18,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/17/12/30/n10007397.md#1">纽约25年伤亡最重火灾 消防员强调救命关键</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/17/12/30/n10009078.md#1">纽约公寓楼大火 休假陆军士兵救人葬身火海</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/18/1/9/n10039888.md#1">曼哈顿公寓七级大火 至少14伤</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/18/6/8/n10466915.md#1">恐击后火速救援 纽约女性消防员首获表彰</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/19/4/8/n11171138.md#1">布碌崙火后住宅楼存坍塌风险</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/7/n12600365.md#1">纽约州、市议员连署  吁关闭堂食与非必要行业</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/7/n12600368.md#1">纽约市东村凌晨6级大火 百年教堂惨遭烧毁</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597628.md#1">为何这么多华人挺川 一名耆老对大选的观察</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597703.md#1">法拉盛发展中心 第20届圣诞树点灯</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597646.md#1">涉华为案 中国教授承认对FBI撒谎</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/12/30/n10007397.md#1">纽约25年伤亡最重火灾 消防员强调救命关键</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/12/30/n10009078.md#1">纽约公寓楼大火 休假陆军士兵救人葬身火海</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/1/9/n10039888.md#1">曼哈顿公寓七级大火 至少14伤</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/8/n10466915.md#1">恐击后火速救援 纽约女性消防员首获表彰</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/4/8/n11171138.md#1">布碌崙火后住宅楼存坍塌风险</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741331.md#1">纽约市出现疑似猴痘病例</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741332.md#1">水牛城枪手遭大陪审团起诉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741334.md#1">纽约上诉法庭恢复“隔膜法” 警察工会不服</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741336.md#1">纽约市议会新法：大楼房东必须安装自动关闭门</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741338.md#1">美人口普查局：纽约州人数不满两千万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/eassqe376/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/30/n12585066.md#1">川普是天选之人？ 专家解析他与圣经的关连</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597490.md#1">【微历史】恩格斯百年阴谋 结出2020美大选恶果</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597428.md#1">【十字路口】川普三大战场反击“选举政变”</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596272.md#1">【重播】关键时刻 川普乔州助选集会演讲</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597744.md#1">【西岸观察】舞弊视频主角现身 乔州州长变脸</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598608.md#1">红三代当吹哨人 证明中国产假选票混入美国</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12597136.md#1">走红毯冻到下巴发抖 孟美岐反问一句登热搜</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596927.md#1">传刘德华8岁女儿住院 朱丽倩陪同现身心脏科</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596670.md#1">杜汶泽赴台拍新节目 介绍移民方式给香港手足</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595062.md#1">Jin迎生日以Solo曲坦言倦怠不安 BTS成员送祝福</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598104.md#1">李翊君演唱会星光云集 黄子佼助阵献上惊喜</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595124.md#1">现在是几点？ CIA照片考验你的判断力</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595215.md#1">按摩脚底2部位 远离失智症！大脑脊椎一起保养</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595443.md#1">美传教士：左派对抗神的旨意 川普才是总统</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/2/n12590408.md#1">生姜别直接吃？国际药膳师：蒸一下功效更强</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598435.md#1">美医师：你该接种新冠疫苗吗？很多人没想过的事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eassqe376/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eassqe376/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/2/n11762099.htm">2019年纽约市火灾死亡人数  比上年减1/4</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/2/n11762099.htm">2019年纽约市火灾死亡人数  比上年减1/4</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eassqe376/djy/blob/master/gb/20/1/2/n11762099.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eassqe376/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eassqe376/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eassqe376/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/1/2/n11762099.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
